# pdf2text

./: LICENSE  README.md  pdf2text.py  pyproject.toml  text2pdf.py
