[tool.poetry]
name = "text2pdf"
version = "0.1.0"
description = ""
authors = ["Sho Shimauchi <sho.shimauchi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymupdf = "^1.24.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-randomly = "^3.15.0"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
ruff = "^0.3.5"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
