[tool.poetry]
name = "pdf2text"
version = "0.1.0"
description = ""
authors = ["Sho Shimauchi <sho.shimauchi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymupdf = "^1.25.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-randomly = "^3.15.0"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
ruff = "^0.11.7"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
